@@ -1,0 +1,27 @@
+#
+# spec file for package diffoscope
+#
+# Copyright (c) 2021 SUSE LLC
+#
+# All modifications and additions to the file contributed by third parties
+# remain the property of their copyright owners, unless otherwise agreed
+# upon. The license for this file, and modifications and additions to the
+# file, is the same license as for the pristine package itself (unless the
+# license for the pristine package is not an Open Source License, in which
+# case the license is the MIT License). An "Open Source License" is a
+# license that conforms to the Open Source Definition (Version 1.9)
+# published by the Open Source Initiative.
+
+
+Name:           diffoscope
+Version:        177
+Release:        0
+Summary:        In-depth comparison of files, archives, and directories
+License:        GPL-3.0-or-later
+Group:          Development/Languages/Python
+URL:            https://diffoscope.org/
+Source0:        https://diffoscope.org/archive/diffoscope-%{version}.tar.bz2
+Source1:        https://diffoscope.org/archive/diffoscope-%{version}.tar.bz2.asc
+Source2:        diffoscope.keyring
+
+%description
